# greencube

./: .gitignore  CLAUDE.md  GREENCUBE_SPEC.md  LICENSE  README.md  benchmark_report.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  PATH
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
site/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_messages.rs  bench_harness.rs  capabilities.rs  commandments.rs  commands.rs  competence.rs  config.rs  context.rs  context_budget.rs  context_clusters.rs  creature_status.rs  curiosity.rs  db.rs  drives.rs  errors.rs  feedback.rs  fork.rs  goals.rs  hardware.rs  idle_thinker.rs  inference.rs  journal.rs  knowledge.rs  lib.rs  main.rs  metrics.rs  models.rs  mood.rs  notifications.rs  patterns.rs  profile.rs  projects.rs  providers.rs  ratings.rs  reflection.rs  relationships.rs  self_verify.rs  spawn.rs  state.rs  task_outcome.rs  (+6 more)
src-tauri/src/api/: agents.rs  brain.rs  completions.rs  health.rs  integration_test.rs  mod.rs
src-tauri/src/api/completions/: delegation.rs  helpers.rs  injection.rs  integration_test.rs  mod.rs  post_task.rs  streaming.rs  tool_defs.rs  tools.rs
src-tauri/src/identity/: mod.rs  registry.rs
src-tauri/src/memory/: episodic.rs  mod.rs
src-tauri/src/permissions/: audit.rs  mod.rs
src-tauri/src/sandbox/: docker.rs  mod.rs
src/agent_loop/: __init__.py  agent.py  cli.py  detection.py  metrics.py  runner.py  tasks.py  tools.py
src/components/: ActivityFeed.tsx  AgentCard.tsx  AuditLog.tsx  ChatPanel.tsx  CreateAgentModal.tsx  EmptyState.tsx  KnowledgeList.tsx  Layout.tsx  MainArea.tsx  MemoryViewer.tsx  OnboardingModal.tsx  SettingsPanel.tsx  SetupScreen.tsx  Sidebar.tsx  SplashScreen.tsx  StatusBadge.tsx
src/context/: AppContext.tsx
src/lib/: events.ts  invoke.ts  types.ts
src/pages/: AgentDetail.tsx  Connect.tsx  Dashboard.tsx  Settings.tsx
src/probe/: __init__.py  cli.py  metrics.py  runner.py  tasks.py
src/probe/providers/: base.py  ollama_provider.py  openai_provider.py
src/styles/: globals.css  index.css  tokens.css
tests/agent_loop/: test_detection.py  test_runner.py  test_tools.py
tests/probe/: test_detection.py  test_detection_smoke.py  test_metrics.py  test_provider_contract.py  test_runner_resume.py
