[package]
name = "greencube"
version = "1.0.0"
edition = "2021"

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"

# Async runtime (Tauri 2 uses tokio internally, we need it for axum)
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for proxying to LLM)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Streaming
tokio-stream = "0.1"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

# Async stream utilities (used for SSE streaming in api/completions.rs)
futures-util = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
